@@ -1,3 +1,4 @@
+2136 [OneClick] added some minor changes for the upcoming next release of the OneClick tool
 2135 [PGC Demux] added pgcdemux for DVD PGC processing
 2134 [OneClick] fixed encoding of AC3 tracks which should be muxed only
 2133 [VobSubber] added job status message during processing
